# memory-agent

./: .gitignore  .memory-agentignore  CHANGELOG.md  Cargo.toml  Cross.toml  LATEST.json  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
crates/memory-agent/: Cargo.toml
crates/memory-agent/hooks/: agent-review-gate.sh  instructions-loaded.sh  post-edit.sh  pre-compact.sh  session-end.sh  session-start.sh  stop.sh  subagent-stop.sh  task-completed.sh  user-prompt.sh
crates/memory-agent/plugins/: opencode-plugin.ts
crates/memory-agent/src/: async_store.rs  config_loader.rs  main.rs  setup.rs  update_check.rs
crates/memory-agent/src/llm/: mod.rs  ollama.rs  prompts.rs
crates/memory-agent/src/mcp/: errors.rs  mod.rs  tools.rs  types.rs
crates/memory-agent/src/skills/: mod.rs  templates.rs
crates/memory-agent/src/source/: config.rs  extract.rs  git.rs  mod.rs
crates/memory-agent/src/tui/: mod.rs  views.rs
crates/memory-core/: Cargo.toml
crates/memory-core/benches/: search_bench.rs
crates/memory-core/src/: config.rs  error.rs  lib.rs  search.rs  test_utils.rs  types.rs
crates/memory-core/src/autonomous/: adaptive.rs  compression.rs  consolidation.rs  mod.rs
crates/memory-core/src/store/: dedup.rs  eventlog.rs  memory.rs  metrics.rs  mod.rs  privacy.rs  relations.rs  schema.rs  scope.rs
crates/memory-core/src/store/migrations/: 001_initial.sql  002_metrics.sql  003_relations.sql  004_cascade_fks.sql  005_cleanup_orphans.sql  006_activity_tokens.sql  007_fix_fts_update_trigger.sql  008_supersedes_index.sql  009_fix_fts_hard_delete_trigger.sql  010_event_log.sql
crates/memory-core/tests/: benchmark_token_savings.rs  config_test.rs  encryption_test.rs  fts5_injection_test.rs  input_validation_test.rs  scope_test.rs  secret_detection_test.rs  store_test.rs
crates/memory-wasm/: Cargo.toml
crates/memory-wasm/src/: lib.rs
docs/: ARCHITECTURE-ASSESSMENT.md  ARCHITECTURE.md  RUST-IMPLEMENTATION.md  SECURITY.md  USAGE.md  VERSIONING.md
docs/guides/: claude-code.md  codex.md  cursor.md  custom.md  gemini-cli.md  opencode.md  vscode.md  windsurf.md
docs/spec/: EXAMPLES.md  PROTOCOL.md
scripts/: install.sh
tests/fixtures/level0/: context-scope.json  dedup.json  delete-soft.json  save-basic.json  search-fts5.json  session-lifecycle.json
tests/fixtures/level1/: extract-config.json  relate-memories.json  stale-check.json
tests/fixtures/level2/: budget-tokens.json  consolidate-dry-run.json
