[package]
name = "memory-agent"
description = "Persistent memory system for AI coding agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
keywords = ["ai", "memory", "agent", "mcp", "sqlite"]
categories = ["database", "command-line-utilities"]

[dependencies]
memory-core = { version = "0.3", path = "../memory-core", features = ["encryption"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "net", "sync"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tui-textarea = { version = "0.7", features = ["crossterm"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
git2 = "0.20"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "tui-textarea"]
local-llm = []

[target.'cfg(windows)'.dependencies]
getrandom = "0.2"

[dev-dependencies]
memory-core = { version = "0.3", path = "../memory-core", features = ["test-utils"] }
tempfile = "3"
