[package]
name = "memory-wasm"
description = "WASM bindings for memory-agent core engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
keywords = ["ai", "memory", "agent", "wasm"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
memory-core = { version = "0.1.1", path = "../memory-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
